--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "dependencies": {
     "@fraction/flotilla": "^1.0.1",
+    "bcrypt": "^3.0.6",
     "debug": "^4.1.1",
     "highlight.js": "^9.15.8",
     "hyperaxe": "^1.3.0",
@@ -26,6 +27,7 @@
     "ssb-mentions": "^0.5.0",
     "ssb-msgs": "^5.2.0",
     "ssb-ref": "^2.13.9",
+    "ulid": "^2.3.0",
     "yargs": "14.0.0"
   },
   "bin": {
