--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hyperaxe": "^1.3.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
+    "koa-helmet": "^5.1.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
